# Fly-by-CNN

./: .gitignore  Untitled.ipynb  Untitled1.ipynb  monday0.nrrd  monday1.nrrd  monday2.nrrd  monday3.nrrd  readme.md
Docker/: Dockerfile  Dockerfile-cpe  Dockerfile_ULMS  Dockerfile_ULMS-cpe  README.md
data/Universal_ID_template_2/: P12_teeth_uid.vtk  P52_teeth_uid.vtk
data/landmarks_upgrade_2/: P12_O.mrk.json  P52_O.mrk.json
kubernetes/: Dockerfile  fly-by-cnn.yaml  kind-config.yaml  readme.md
src/: Untitled.ipynb  Untitled1.ipynb
src/Slicer-extension/: CMakeLists.txt  README.md  readme.md
src/Slicer-extension/first_module/: CMakeLists.txt  first_module.py
src/Slicer-extension/flyby_cli/: CMakeLists.txt  fly_by_features.py  flyby_cli.py  flyby_cli.xml  utils.py_
src/Slicer_extension/flyby_cli/: fly_by_features.py
src/app/: ._vector2vector.cxx  ._vector2vector.xml  ._vtkLinearSubdivisionFilter2.cxx  ._vtkLinearSubdivisionFilter2.h  CMakeCache.txt  CMakeLists.txt  README.md  convert_off.cxx  convert_off.xml  cscope.out  fly_by_features.cxx  fly_by_features.xml  surfacefeaturesextractor  surfacefeaturesextractor.cxx  surfacefeaturesextractor.h  surfacefeaturesextractor.hxx  surfacefeaturesextractor.xml  tags  vector2vector.cxx  vector2vector.xml  vtkLinearSubdivisionFilter2.cxx  vtkLinearSubdivisionFilter2.h  vtkOFFReader.cxx  vtkOFFReader.h
src/kubernetes/: Dockerfile  fly-by-cnn.yaml  pv.yaml  pvc.yaml  readme.md
src/py/: .compute_max.py.swp  .utils.py.swp  Correct_Label.py  FeatureExtraction.py  FiberDataset.py  LinearSubdivisionFilter.py  Run_Model.py  Set_Label.py  add_array.py  compute_max.py  compute_scale_factor.py  dental_model_seg.py  dilate.py  distance_maps.py  eval_dental_modelseg.py  eval_regionid_seg.py  fiber_test.py  fiber_test_report.py  fiber_train.py  fix_fiber_names.py  fly_by_features.py  labeling.py  merge_models.py  model.py  nrrd2vtk.py  number_fibers.py  output_architecture.sh  post_process.py  predict.py  predict_ALI.py  predict_LU.py  predict_fiber_bundle.py  predict_landmarks.py  predict_v3.py  preposs_RC.py  preprocess_landmarks.py  preprocess_training.py  readers.py  readme.md  reshape_features.py  (+22 more)
src/py/ALIDDM/: LinearSubdivisionFilter.py  agent.py  camera.py  fly_by_features.py  fly_by_features_2.ipynb  fly_by_features_2.py  installation.py  main.py  post_process.py  prediction.py  preprocess.py  readers.py  utils.py  utils_cam.py  utils_class.py
src/py/ALIDDM/.ipynb_checkpoints/: camera-checkpoint.py
src/py/ALIDDM/runs_0/: events.out.tfevents.1638822453.587233493.guest.umich.net.39424.0  events.out.tfevents.1638822533.587233493.guest.umich.net.39635.0  events.out.tfevents.1638822635.587233493.guest.umich.net.39689.0  events.out.tfevents.1638822903.587233493.guest.umich.net.39920.0  events.out.tfevents.1638822986.587233493.guest.umich.net.40013.0  events.out.tfevents.1638823035.587233493.guest.umich.net.40051.0  (+16 more)
src/py/Classification_LU/: model.py  testing.py  training.py
src/py/FiboSeg/: Dockerfile  Dockerfile-cpe  metric.py  predict_v3.py  predict_v5.py  unet_training_v2.py  unet_training_v3.py  unet_training_v4.py  violin_plots.py
src/py/Landmarks/: json2vtk.py  modified_jsonFile.py  train_useg_landmarks.py
src/py/PSCP/: create_3D_RC.py  create_RC_object.py  merge.py  nii2nrrd.py  separate.py
src/py/challenge-teeth/: challenge_teeth_all.csv  challenge_teeth_training.py  challenge_teeth_training_mathieu.py  obj_to_vtk.py  post_process.py  readme.md  teeth_challenge_predict.py  teeth_challenge_train.py  teeth_dataset.py  teeth_logger.py  teeth_nets.py  test_teeth_dataset.py  utils.py
src/py/cleft/: cleft_dataset.py  cleft_gradcam.py  cleft_logger.py  cleft_nets.py  cleft_predict.py  cleft_train.py  eval_classification.py  png_to_mp4.py  post_process.py  readme.md  unit_surf.py  utils.py
src/py/condyles/: condyle_dataset.py  condyle_gradcam.py  condyle_gradcam_vit.py  condyle_logger.py  condyle_nets.py  condyle_predict.py  condyle_train.py  create_vid_from_seq_blender.py  eval_classification.py  flyby.yml  predict.py
src/py/notebooks/: challenge-brain.ipynb  fly_by_features.ipynb  predict_v2.py  unet_training.ipynb  unet_training.py
src/pytorch3d/src/: LinearSubdivisionFilter.py  Untitled.ipynb  fly_by_features.ipynb  flyby_torch.py  readers.py  unet_training.py  utils.py
src/sh/: compute_DMS.sh  compute_Landmarks.sh  compute_MergingSeparating.sh  compute_PSCP.sh  compute_ULM.sh  compute_ULMS.sh  compute_ULMS_directory.sh  compute_Universal_Labeling.sh
src/slicer_jaw_segmentation/: CMakeLists.txt  readme.md
src/slicer_jaw_segmentation/prediction/: prediction.py
src/slicer_jaw_segmentation/prediction/Resources/UI/: prediction.ui
src/slicer_jaw_segmentation/predictioncli/: predictioncli.py  predictioncli.xml
(+89 files in other folders)
